Server working, login script needs work

--- a/W3/Workshop/www/login.html
+++ b/W3/Workshop/www/login.html
@@ -5,7 +5,7 @@
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <title>Login Form</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="script.js"></script>
+        <script src="login_script.js"></script>
     </head>
     <body>
 
@@ -20,6 +20,7 @@
         </div>
 
         <div id="postResultDiv">ss</div>
+        <div id="errormsg" class="hidemessage">User credentials do not match</div>
 
     </body>
 </html>
